opam-version: "2.0"
name: "coq-b-tree"
version: "1.0"
maintainer: "humamalhusaini@tutamail.com"
authors: "Pierre Castoran, slightly modified by Humam Alhusaini"
homepage: "https://github.com/Tralalero-Tralalal/Coq-b-tree"
dev-repo: "git+://github.com/Tralalero-Tralalal/Coq-b-tree"
bug-reports: "https://github.com/Tralalero-Tralalal/Coq-b-tree/issues"
license: "MIT"
depends: [
  "coq" {>= "8.0"}
]
build: [
  ["coq_makefile" "-f" "_CoqProject" "-o" "Makefile"]
  [make]
]
install: [
  ["mkdir" "-p" "%{lib}%/coq/user-contrib/BTree"]
  ["cp" "b_tree.vo" "b_tree.glob" "%{lib}%/coq/user-contrib/BTree/"]
]
remove: [
  ["rm" "-rf" "%{lib}%/coq/user-contrib/BTree"]
]
synopsis: "A Coq binary tree module"
description: """
This package provides a simple binary tree data structure and associated functions.
"""
